# high-performance-computing-pi-approximation-monte-carlo

./: CMakeLists.txt  README.md  pi_approximation_parallel_cpu_openmp.cpp  pi_approximation_parallel_gpu_cuda  pi_approximation_sequential_cpu  pi_approximation_sequential_cpu.cpp
src/: pi_approximation_parallel_cpu_openmp  pi_approximation_parallel_gpu_cuda.cu
